<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dateBox"
    style="@style/dateBox"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="?actionBarSize">

        <ImageButton
            android:id="@+id/datePrev"
            style="@style/dateBoxButton"
            android:padding="0dp"
            android:src="@drawable/navigation_previous_item"
            android:layout_width="?actionBarSize"
            android:contentDescription="@string/prevDay" />

        <LinearLayout
            android:id="@+id/dateButton"
            style="@style/dateBoxButton"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/dateWeekday"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="?button_secondary_text"
                android:textSize="16sp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/dateDMY"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="?button_text"
                android:textSize="18sp"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/dateNext"
            style="@style/dateBoxButton"
            android:src="@drawable/navigation_next_item"
            android:layout_width="?actionBarSize"
            android:contentDescription="@string/nextDay" />
    </LinearLayout>

    <include layout="@layout/inc_zonebutton"/>
</LinearLayout>